[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dzira"
version = "0.0.1"
dependencies = [
    "click",
    "jira",
    "python-dotenv",
    "tabulate",
]
authors = [
    { name="Piotr Kaznowski", email="piotr@kazno.com" },
]
description = "A cli wrapper for jira API to track sprints and manage worklogs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
dzira = "dzira.dzira:main"

[project.urls]
"Homepage" = "https://github.com/caseneuve/dzira"
"Bug Tracker" = "https://github.com/caseneuve/dzira/issues"